edit learning, resilience and humility

--- a/Focus.tex
+++ b/Focus.tex
@@ -34,7 +34,7 @@
 \HugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
 
 %TODO possibly humility ? 
-% \smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it}{George Bernard Shaw}{MA_NOW2}{}
+% \smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it.}{George Bernard Shaw}{MA_NOW2}{}
 
 %task selection
 \cleartoleftpage	
