--- a/Humility.tex
+++ b/Humility.tex
@@ -15,10 +15,10 @@
 
 %%% help
 \cleartoleftpage
-\hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground.}{}{Sun Tzu}{}{}
+\HugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground.}{}{Sun Tzu}{}{}
 
 \cleartorightpage
-\hugeQuote{DLP_HELP}{Take the help.}{}{Danielle La Porte}{}{}
+\HugeQuote{DLP_HELP}{Take the help.}{}{Danielle La Porte}{}{}
 
 
 
@@ -36,12 +36,12 @@
 \cleartorightpage
 
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
-\hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you.}{Mike Tyson}{}{}
+\hugeQuote{MT_VISIT}{If you're not humble}{ in this world, then the world will throw humbleness at you.}{Mike Tyson}{}{}
 
+\cleartoleftpage
+\HugeQuote{MC_VISIT}{The moment you think you are successful}{, failure will be there for you.}{Maurizio Cattelan}{}{}
 \cleartorightpage
-\hugeQuote{MC_VISIT}{The moment you think you are successful}{, failure will be there for you.}{Maurizio Cattelan}{}{}
-
-\hugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference.}{Marcus Aurelius}{}{}
+\HugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference.}{Marcus Aurelius}{}{}
 
 %growth mindset
 \cleartoleftpage
@@ -55,7 +55,7 @@
 
 \cleartorightpage
 \hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or not;}{\newline
-When they change you should shift along with them.}{Ryan Holiday}{JKZ_ENDURE}{The facts were always there, of course, just unclear or hidden. Think clearly about what you're looking at. cf. \ref{NT_FAIL}}
+When they change you should shift along with them.}{Ryan Holiday}{JKZ_ENDURE}{The facts were always there, of course, just unclear or hidden. Think clearly about what you're looking at. \S \ref{NT_FAIL}}
 
 \hugeQuote{MA_CHANGE}{Remember that to change your mind}{ and accept correction are mere acts too.}{Marcus Aurelius}{BR_CHANGE}{and so, under our control}
 
@@ -65,9 +65,10 @@ When they change you should shift along with them.}{Ryan Holiday}{JKZ_ENDURE}{Th
 
 \hugeQuote{WS_FOOL}{The fool doth think he is wise and the wise man knows himself to be a fool}{}{William Shakespeare}{P_TALK}{}
 
-\hugeQuote{RG_CRITICISM}{Never be so self absorbed}{ as to believe that the master is interested in your criticisms of him, now matter how accurate they are.}{Robert Greene}{}{but always be ready to listen and use the criticism you hear.}
-
 \hugeQuote{JVG_VALUE}{A great failing}{: to see yourself as more than you are and value yourself at less than your true worth.}{John Von Goethe}{AG_WORK}{} %todo check link to p63 in original notes
+\cleartorightpage
+\HugeQuote{RG_CRITICISM}{Never be so self absorbed}{ as to believe that the master is interested in your criticisms of him, now matter how accurate they are.}{Robert Greene}{}{but always be ready to listen and use the criticism you hear.}
+
 
 %%%bigger view
 \cleartoleftpage
