--- a/Leadership.tex
+++ b/Leadership.tex
@@ -114,6 +114,7 @@ Reward results}{BAML}{}{}
 %\hugeQuote{CWB_FEEL}{They may forget what you said}{ but they will never forget how you made them feel.}{Carl W. Buechner}{}{}
 
 
+
 % transparency
 %%%%%%%%%%%%%%%
 \cleartorightpage
@@ -125,7 +126,11 @@ Reward results}{BAML}{}{}
 % opacity / subtlty
 %%%%%%%%%%%%%%%%%%%%%
 
-\hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{François de La Rochefoucauld}{M_WORK}{}
+% \hugeQuote{H_ART}{The art lies in concealing the art.}{}{Horace}{}{} 
+% \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful.}{Michelangelo}{}{}
+% \hugeQuote{RG_WORK}{never expose the sweat}{ and labour behind your poise.}{Robert Greene}{}{}
+
+\hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{Fran\c{c}ois de La Rochefoucauld}{M_WORK}{}
 
 \cleartorightpage
 \HugeQuote{FR_DTR}{When you do things right}{, people will wonder if you've done anything at all.}{Computerised space probe, Futurama}{}{} 
