--- a/Learning.tex
+++ b/Learning.tex
@@ -19,14 +19,6 @@
 \cleartorightpage
 \HugeQuote{HST_REACT}{Every reaction is a learning process}{; every significant experience alters your perspective.}{Hunter S. Thompson}{}{}
 
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% TODO is this more for leadership now ? 
-% \hugeQuote{H_ART}{The art lies in concealing the art.}{}{Horace}{}{} 
-% \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful.}{Michelangelo}{}{}
-% % \hugeQuote{RG_WORK}{never expose the sweat}{ and labour behind your poise.}{Robert Greene}{}{}
-
-
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -62,22 +54,19 @@ fewer conclusions.
 \cleartoleftpage
 \hugeQuote{RG_TRUST}{Trust yourself}{ more and others less.}{Robert Greene}{}{}
 \hugeQuote{WS_TRUST}{Love all}{.\newline
-Trust a few.\newline
+Trust few.\newline
 Do wrong to none.}{William Shakespeare}{}{}
 \cleartorightpage
-\HugeQuote{MI_TRUST}{You'll only get three mentors you can trust}{. Make sure you're paying attention so you don't miss them.}{Madalina G. Idomir}{HT_CREDIT}{}
+\HugeQuote{MI_TRUST}{You'll only get three mentors you can trust}{. Just make sure you're paying attention so you don't miss them.}{Madalina G. Idomir}{HT_CREDIT}{}
 
 
-%
+%focus on what's important
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-\hugeQuote{NT_NNP}{Never nitpick a heuristic}{}{Nassim Taleb}{}{}
+\HugeQuote{NT_NNP}{Never nitpick a heuristic.}{}{Nassim Taleb}{}{}
 
-\hugeQuote{S_FOLLY}{Isn't it the height of folly to learn inessential things}{ when time is so desperately short?}{Seneca}{MA_DL}{}
+\cleartorightpage
+\HugeQuote{S_FOLLY}{Isn't it the height of folly to learn inessential things}{ when time is so desperately short?}{Seneca}{MA_DL}{}
 
 \cleartorightpage
 \HugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
-
-%
-%%%%%%%%%%%%%%%%%%%%%%
-
