--- a/Resilience.tex
+++ b/Resilience.tex
@@ -93,9 +93,11 @@ It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}
 \hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now.}{Marcus Aurelius}{}{}
 
 %TODO: update ? 
-\hugeQuote{RH_ENDURE}{See things for what they are,}{ do what we can, endure what we must.}{Ryan Holiday}{}{} % similar to schopenhauer
+\cleartoleftpage
+\HugeQuote{RH_ENDURE}{See things for what they are,}{ do what we can, endure what we must.}{Ryan Holiday}{}{} % similar to schopenhauer
 
-\hugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves.}{Marcus Aurelius}{}{}
+\cleartorightpage
+\HugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves.}{Marcus Aurelius}{}{}
 
 
 
