--- a/project.tex
+++ b/project.tex
@@ -71,7 +71,7 @@
 \refstepcounter{chapter}
 \input{Conclusion}
 
-\refstepcounter{chapter}
-\printindex
+%\refstepcounter{chapter}
+%\printindex
 
 \end{document}
