--- a/Patience.tex
+++ b/Patience.tex
@@ -15,7 +15,7 @@ Am I in charge of this situation or is this situation in charge of me?}{}{Anthon
 If there is a prospect of victory move; \newline
 Otherwise, do not.}{Sun Tzu}{}{}
 
-\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{}{}
+\hugeQuote{BG_NTL}{Never contend with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{}{}
 
 \hugeQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it}{.\newline
 Your doubts and hestitation will infect your execution.}{Robert Greene}{}{}
