add note from Seth godin

--- a/Patience.tex
+++ b/Patience.tex
@@ -69,6 +69,10 @@ Your doubts and hestitation will infect your execution.}{Robert Greene}{}{}
 \smallQuote{MA_GRIEF}{How much more damage grief and anger do than the things that caused them.}{Marcus Aurelius}{}
 
 \cleartorightpage
+
+\HugeQuote{SG_WINDOW}{Often, people who are happier or more effective are merely seeing things in a different (and more appropriate) time window.}{}{Seth Godin}{}{} 
+
+\cleartorightpage
 \HugeQuote{AM_FEAR}{Fear is a bad advisor.}{}{Angela Merkel}{}{}
 
 
