add quote from Ruan Holiday

--- a/Humility.tex
+++ b/Humility.tex
@@ -79,7 +79,7 @@ When they change you should shift along with them.}{Ryan Holiday}{JKZ_ENDURE}{Th
 \HugeQuote{CTG_COUNSEL}{Diversity in counsel}{.\newline
 Unity in command.}{Cyrus the Great}{ST_GUIDE}{} % possibly move to confidence
 
-
+%\smallQuote{RH_EARN}{We never earn the right to be greedy or to pursue our interests at the expense of everyone else.}{Ryan Holiday}{} 
 
 \cleartorightpage
 
