add notes from Zwieg's biography of Montaigne

--- a/Action.tex
+++ b/Action.tex
@@ -44,6 +44,10 @@ acomplishment endures.}{Lao Tzu}{HT_CREDIT}
 
 \HugeQuote{MLK_HABIT}{If I cannot do great things}{ I can do small things in a great way.}{Martin Luther King Jr.}{}{}
 
+\cleartoleftpage
+
+\HugeQuote{SZ_LESSON}{History is a great instruction manual}{, for it is in his actions that a man reveales himself.}{Stefan Zwieg}{}{}
+
 \cleartorightpage
 \HugeQuote{AR_HABIT}{Quality is not an act.}{\newline
 It is a habit.}{Aristotle}{}{}
