--- a/GenerosityIntro.tex
+++ b/GenerosityIntro.tex
@@ -1,7 +1,7 @@
 \cleardoublepage
 {\small
 
-Materially speaking, we know that it is better to help many than to live in luxury \footnote{Musonius Rufus, \cite{RLS}}, we don't need a top of the range car more than the homeless man needs the next meal. Professionally we can be equally tight fisted, grabbing at praise from our superiors and doing our peers down so we are first in line for the bonus and promotion. We don't need to do either of those things of course. Allowing others to take the credit for work we've played a part in or setting others up for success can feel like career suicide but it's character taits like this that, with time, mean we'll be seen as the person who brings up strong talent and the person needed on the project to make sure it's a roaring success.
+Materially speaking, we know that it is better to help many than to live in luxury \footnote{Musonius Rufus, }, we don't need a top of the range car more than the homeless man needs the next meal. Professionally we can be equally tight fisted, grabbing at praise from our superiors and doing our peers down so we are first in line for the bonus and promotion. We don't need to do either of those things of course. Allowing others to take the credit for work we've played a part in or setting others up for success can feel like career suicide but it's character taits like this that, with time, mean we'll be seen as the person who brings up strong talent and the person needed on the project to make sure it's a roaring success.
 
 Even when we behave like this, we know other people are selfish, they will upset us and they'll unravel our plans. It doesn't mean they're out to get us (\S \ref{H_RAZOR} and \ref{MA_TRUST}) even though it may feel like that from time to time.
 
