--- a/Humility.tex
+++ b/Humility.tex
@@ -3,6 +3,8 @@
 \cleartorightpage
 \HugeQuote{ME_BEGIN}{Be willing}{ to be a beginner every single morning.}{Meister Eckhart}{EP_FOOL}{}{}
 
+\cleartorightpage
+\HugeQuote{FP_WDIK}{Que sais-je?}{}{French phrase via Montaigne}{}{\say{what do I know?}}
 
 %%%life / death
 
@@ -20,6 +22,9 @@
 \cleartorightpage
 \HugeQuote{DLP_HELP}{Take the help.}{}{Danielle La Porte}{}{}
 
+\cleartorightpage
+
+\HugeQuote{MDM_WEIGH}{I do not count my borrrowings}{, I weight them.}{Michel de Montaigne}{}{}
 
 
 %%%fate
