--- a/Leadership.tex
+++ b/Leadership.tex
@@ -6,9 +6,9 @@
 %%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
-\hugeQuote{FB_WISE}{Wise men make more opportunites than they find.}{}{Francis Bacon}{}{}
+\hugeQuote{FB_WISE}{Wise men make more opportunities than they find.}{}{Francis Bacon}{}{}
 
-\hugeQuote{RLS_SEED}{Don't judge each day by the harvest you reep}{ but by the seeds you sow.}{Robert Louis Stephenson}{}{}
+\hugeQuote{RLS_SEED}{Don't judge each day by the harvest you reap}{ but by the seeds you sow.}{Robert Louis Stephenson}{}{}
 
 \cleartorightpage
 
@@ -38,7 +38,7 @@
 
 
 \cleartorightpage
-\HugeQuote{AE_DO}{People do not change}{, they are merely revealed.}{Anne Enright}{}{}
+\HugeQuote{AE_DO}{People do not change}{, they are merely revealed.}{Anne Enright}{SZ_LESSON}{}
 
 
 \cleartorightpage
@@ -95,7 +95,7 @@ If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CRE
 
 \smallQuote{RG_TRUSTYOU}{In the end, if people mistrust you and resist your authority you have only yourself to blame.}{Robert Greene}{}
 
-% succesful completion
+% successful completion
 %%%%%%%%%%%%%%%%%%%%%%
 \hugeQuote{ES_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results.}{Shackleton}{}{}
 
@@ -130,7 +130,7 @@ Reward results}{BAML}{}{}
 % \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful.}{Michelangelo}{}{}
 % \hugeQuote{RG_WORK}{never expose the sweat}{ and labour behind your poise.}{Robert Greene}{}{}
 
-\hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{Fran\c{c}ois de La Rochefoucauld}{M_WORK}{}
+\HugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{Fran\c{c}ois de La Rochefoucauld}{M_WORK}{}
 
 \cleartorightpage
 \HugeQuote{FR_DTR}{When you do things right}{, people will wonder if you've done anything at all.}{Computerised space probe, Futurama}{}{} 
