--- a/Learning.tex
+++ b/Learning.tex
@@ -3,11 +3,14 @@
 \cleartorightpage
 \HugeQuote{BH_FP}{The taking of flash photos}{ and the use of recording devices of any kind including; pens, pencils, eyes and ears, is strictly encouraged.}{Bob Holman}{}{}
 
+\cleartorightpage
+\HugeQuote{MDM_BOOKS}{Books}{, I find are the best provisions a man can take with him on life's journey.}{Michel de Montaigne}{}{}
+
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 \hugeQuote{RG_MASTERY}{You must see your attempt at attaining mastery as something necessary and positive.}{}{Robert Greene}{}{}
-\hugeQuote{TP_BOOK}{If I read a book}{ and get one good idea from that \$20, then I've gotten one of the greatest deals of all time.}{Tom Peters}{}{}
+\hugeQuote{TP_BOOK}{If I read a book}{ and get one good idea from that \$20, then I've gotten one of the greatest deals of all time.}{Tom Peters}{MDM_BOOKS}{}
 \hugeQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{}{Benjamin Franklin}{}{}
 \hugeQuote{RH_LIVE}{Study as if you were going to live forever}{ but live as if you were going to die tomorrow.}{Edmund Rich}{}{}
 %Possibly much earlier though.
@@ -29,7 +32,10 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-\HugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong.}{Bertand Russell}{}{}
+\hugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong.}{Bertand Russell}{}{}
+ 
+\hugeQuote{SW_CHANGE}{The truths he finds}{ may in the comming months or even in the coming years be truths no more.}{Stefan Zwieg}{}{qv. half life of knowledge\footnote{http://bit.ly/2dRSViF}.}
+
 \cleartorightpage
 
 \HugeQuote{RH_ML}{More listening}{,\newline 
@@ -52,10 +58,13 @@ fewer conclusions.
 %%%%%%%%%%%%%%%%%%
 
 \cleartoleftpage
-\hugeQuote{RG_TRUST}{Trust yourself}{ more and others less.}{Robert Greene}{}{}
-\hugeQuote{WS_TRUST}{Love all}{.\newline
+\smallQuote{RG_TRUST}{Trust yourself more and others less.}{Robert Greene}{}
+\smallQuote{WS_TRUST}{Love all.\newline
 Trust few.\newline
-Do wrong to none.}{William Shakespeare}{}{}
+Do wrong to none.}{William Shakespeare}{}
+
+\smallQuote{MDM_SHEEP}{He who sheep-like follows another follows nothing. He discovers nothing because he seeks nothing.}{Michel de Montaigne}{}
+
 \cleartorightpage
 \HugeQuote{MI_TRUST}{You'll only get three mentors you can trust}{. Just make sure you're paying attention so you don't miss them.}{Madalina G. Idomir}{HT_CREDIT}{}
 
@@ -67,6 +76,8 @@ Do wrong to none.}{William Shakespeare}{}{}
 
 \cleartorightpage
 \HugeQuote{S_FOLLY}{Isn't it the height of folly to learn inessential things}{ when time is so desperately short?}{Seneca}{MA_DL}{}
+\cleartoleftpage
+\HugeQuote{MDM_WROTE}{To know by heart is not to know}{, it is to keep what they have given youa and store it in your memory}{Michel de Montaigne}{}
 
 \cleartorightpage
 \HugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
