--- a/Patience.tex
+++ b/Patience.tex
@@ -70,7 +70,7 @@ Your doubts and hestitation will infect your execution.}{Robert Greene}{}{}
 
 \cleartorightpage
 
-\HugeQuote{SG_WINDOW}{Often, people who are happier or more effective are merely seeing things in a different (and more appropriate) time window.}{}{Seth Godin}{}{} 
+\HugeQuote{SG_WINDOW}{Often, people who are more or more effective simply see things in a more appropriate time window.}{}{Seth Godin}{}{} 
 
 \cleartorightpage
 \HugeQuote{AM_FEAR}{Fear is a bad advisor.}{}{Angela Merkel}{}{}
