--- a/Resilience.tex
+++ b/Resilience.tex
@@ -29,13 +29,17 @@ stand eight.}{Japanese Proverb}{MA_PERSIST2}{}
 %%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
-\smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust.}{Schiller}{}{}
+\smallQuote{DLP_DNA}{You don't need their approval.}{Danielle La Porte}{}{}
 
 \smallQuote{TS_HHH}{Haters gonna hate, hate, hate, hate, hate.}{Taylor Swift}{MA_HATE}{}
 
-\smallQuote{DLP_DNA}{You don't need their approval.}{Danielle La Porte}{}{}
+\smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust.}{Schiller}{}{}
 
-\smallQuote{MA_MIND1}{What is outside my mind means nothing to it.}{Marcus Aurelius}{}{}
+\smallQuote{MM_TAKE}{The outside world can take nothing from you 
+and cannot unhinge you, as long as you do not allow yourself to 
+be disturbed. The events of your time remain impotent before you 
+as long as you refuse to take part.}{Michel de Montaigne}{}{}
+
 
 %\smallQuote{MA_SANITY}{Ambition: tying your well being to what other people say and do.\newline
 %Self-indulgence: tying it to the things that happen to you.\newline
@@ -54,7 +58,12 @@ stand eight.}{Japanese Proverb}{MA_PERSIST2}{}
 \cleartorightpage
 \HugeQuote{MA_TC}{Tranquility comes when you stop caring what they say.}{}{Marcus Aurelius}{}{}
 
-\HugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed.\newline
+
+\cleartoleftpage
+
+\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it.}{Marcus Aurelius}{}{}
+
+\hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed.\newline
 Don't feel harmed and you haven't been.}{Marcus Aurelius}{}{}
 
 % \hugeQuote{MA_HARM2}{It can ruin your life}{ only if it ruins your character. Otherwise it cannot harm you. Inside or out.}{Marcus Aurelius}{}{}
