--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -22,5 +22,10 @@
 \cleartorightpage
 \HugeQuote{CP_SCAR}{It is so hard to forget pain}{ but it is harder to remember sweetness. There is no scar for happiness.}{Chuck Palaniuk}{}{} %possibly ref MR_WORK
 
+
+\cleartorightpage
+
+\HugeQuote{SW_CUSTODIAN}{Of course}{, I never considered myself the owner of these things, only their custodian}{Stefan Zwieg}{}{}
+
 % TODO not the right place at all
 %\hugeQuote{MR_WORK}{If you accomplish something good with hard work}{, the labour passes quickly but the good endures; if you do something shameful in pursuit of pleasure, the pleasure passes quickly but the shame endures}{Musonius Rufus}{}{}
