Add notes from Cato and Cleanthes

--- a/Patience.tex
+++ b/Patience.tex
@@ -46,6 +46,8 @@ Your doubts and hestitation will infect your execution.}{Robert Greene}{}{}
 \cleartorightpage
 \HugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools because they have to say something.}{Plato}{}{}
 
+\cleartorightpage
+\HugeQuote{C_WAIT}{I will begin to speak}{ when I am not going to say what was better left unsaid}{Cato}{}{}
 
 %todo unsure, maybe generosity
 %%%%%%%%%%%%%%%%%%%%%%%%
