--- a/Resilience.tex
+++ b/Resilience.tex
@@ -77,16 +77,16 @@ Don't feel harmed and you haven't been.}{Marcus Aurelius}{}{}
 %%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
-\hugeQuote{RH_EFFORT}{You control the effort}{ not the results.}{Ryan Holiday}{}{}
+\HugeQuote{MR_UTU}{If you work hard to do what is right}{, do not be upset by roadblocks; think about how many of the things in your life haven't turned out as you wanted them to but as they should have done.}{Musonius Rufus}{} 
 
-\hugeQuote{MR_UTU}{If you work hard to do what is right}{, do not be upset by roadblocks; think about how many of the things in your life haven't turned out as you wanted them to but as they should have done.}{Musonius Rufus}{} 
+\HugeQuote{RH_EFFORT}{You control the effort}{ not the results.}{Ryan Holiday}{}{}
 
+\HugeQuote{C_DRAG}{Fate guides the willing}{,\newline
+but drags the unwilling.}{Cleanthes}{}{}
 
 \cleartorightpage
 \HugeQuote{ST_UTU}{Ta eph'hemin}{\newline
 Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
-
-
 
 
 %% observation vs perception
