balance some page layouts and edit some text

--- a/ActionIntro.tex
+++ b/ActionIntro.tex
@@ -9,8 +9,8 @@ The hope is though that we won't be paralysed and we will make a positive impact
 
 We won't be successful all the time (there are sometimes periods of weeks during which I'm not very successful on most fronts) but by persevering (\S \ref{AR_HABIT} and \ref{JP_STAND}) we can chip away at the habits (and even relationships (\S \ref{LC_COMPANY})) that are slowing us down or even undoing good progress we've already made.
 
-We need to remember what's important to us. Remember how much time we have and how we choose to spend it\llink{http://bit.ly/1OMUOuU}. Marcus often looks at how little life he's been allotted (and how much he thinks he has left). Although, as Seneca reminds us, it's not that we are allocated a short time, it's just that we are wasteful of the time we do have. That's a good reminder for us to just get on with things and not get wrapped up in ourselves too much. 
+We need to remember what's important to us. Remember how much time we have and how we choose to spend it\llink{http://bit.ly/1OMUOuU}. Marcus often looks at how little life he's been allotted and how little he thinks he has left. Although, as Seneca points out, it's not that we are allocated a short time, it's just that we are wasteful of the time we do have. That's a good reminder for us to just get on with things and not get wrapped up in ourselves too much. 
 
-We also need to remember that people will see how we spend our time and the choices we make. We need to be honest with ourselves about what is important to us and what's not. No matter what we say they will believe what they see us do (and what they see us avoid) \S \ref{SZ_LESSON}. 
+We also need to remember that people will see how we spend our time and the choices we make. We need to be honest with ourselves about what is important to us and what's not. No matter what we say they will believe what they see us do (and what they see us avoid \S \ref{SZ_LESSON}). 
 
 }
