--- a/ConfidenceIntro.tex
+++ b/ConfidenceIntro.tex
@@ -1,9 +1,8 @@
 \cleardoublepage
 {\small
-
 It's a fine line between arrogance and confidence. We need to be sure about what we're about to do but we need to remember that we're only human and we will make errors in judgement, just as we have before (\S \ref{MA_MISTAKE}). 
 
-Of course, we can't let our past (\S \ref{DLP_NYG} and \ref{LB_SEP}) define our self image and we can't let our past define how we behave now. Once we've learnt from those events, we need to understand that we can't change what happened but we can have an impact on what happens next.
+Of course, we can't let our past (\S \ref{DLP_NYG}) define our self image and we can't let our past define how we behave now. Once we've learnt from those events, we need to understand that we can't change what happened but we can have an impact on what happens next.
 
 Unchecked, our negative self talk and fear of failure can be paralysing but if we structure our tasks and goals in the right way we can control it. If we aim for things which are under our control we can be more sure of success. In areas where we have some control (or none at all) we need to consider what would constitute a successful outcome and what behaviours might influence that. We're not looking to win the Thursday night poker game, we're looking to make fewer errors than last week. We're not looking to get a raise at work, we're looking to consistently be valuable to our boss. We're not looking to win The Nobel Prize in Literature, we're looking to hone our craft and produce a rich portfolio of work.
 
@@ -12,7 +11,7 @@ Incidentally, if we manage to consistently do those things we stand a much bette
 We don't have control of how things will turn out measured by external metrics and that can be a big hit on our confidence, but if we change our success criteria focussing on internal metrics we can always win or learn. 
 
 Being bold enough to act in the face of that uncertainty. That's what we're aiming for.
-%%%%% page break %%% %
+
 }
 
 % Amy Cuddy's ted talk:  http://bit.ly/1he9hAR
