--- a/Generosity.tex
+++ b/Generosity.tex
@@ -2,7 +2,7 @@
 
 \cleartoleftpage
 
-\smallQuote{MA_GIVE}{You've given and they've received it. And yet, like an idiot, you keep holding out for more. To be credited with a good deed? To be repaid in kind? why?}{Marcus Aurelius}{HT_CREDIT}
+\smallQuote{MA_GIVE}{You've given and they've received it. And yet, like an idiot, you keep holding out for more. To be credited with a good deed? To be repaid in kind? Why?}{Marcus Aurelius}{HT_CREDIT}
 
 \smallQuote{BT_GIVE}{Always give without remembering and receive without forgetting.}{Brian Tracy}{S_DO}{}
 
@@ -13,11 +13,13 @@
 \smallQuote{LT_SELF}{No self interest? Self is fulfulled.}{Lao Tzu}{}
 
 %todo review
-\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
+\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{JDB_UNNAMED}
+\smallQuote{SOL_LISTEN}{The good listener is accutely aware of how insane we all are.}{School of Life}{}{}
 
 \cleartorightpage
 
-\HugeQuote{MA_TRUST}{The people I deal with today will be}{:
+\HugeQuote{MA_TRUST}{The people I deal with}{\newline
+ today will be:
 \begin{itemize}
 	\item meddling
 	\item ungrateful
@@ -29,7 +31,8 @@
 
 %Roman playwright and poet Terence gave voice when he wrote: ‘I am human: nothing human is foreign to me’ 
 \cleartoleftpage
-\HugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
+\HugeQuote{MA_HATE}{Someone hates me?}{\newline
+Their problem.\newline
 Mine: to be patient and cheeerful with everyone (including them).}{Marcus Aurelius}{}{}
 \cleartorightpage
 \HugeQuote{LT_HATE}{People who are good}{, I treat well. People who are not good, I also treat well.}{Lao Tzu}{}{}
@@ -57,15 +60,18 @@ Yet, I do not intend that to be the definition of me.}{Michel De Montaigne}{HM_D
 
 
 \cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{EC_FTP}{Never say that people are evil.}{ You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
 
 \hugeQuote{WD_JUDGE}{When you judge another}{ you do not define them, you define yourself.}{Wayne Dyer}{MA_JUDGE}{}
-
-\HugeQuote{E_ISR}{It seemed right to him.}{}{Epictetus}{}{}
+\vspace*{\fill}
 
 \cleartorightpage
 \HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
 Never attribute to malice that which can be adequately explained by incompetence.}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
+
+\cleartorightpage
+\HugeQuote{E_ISR}{It seemed right to him.}{}{Epictetus}{}{Otherwise he wouldn't have done it of course.}
 
 %Unsure on which chapter
 %\hugeQuote{LT_PAST}{Forgiveness means giving up hope}{ of a better past}{Lily Tomlin}{MA_NOW1}{}
