--- a/LeadershipIntro.tex
+++ b/LeadershipIntro.tex
@@ -9,7 +9,7 @@ When things go wrong we need to move with a level of determination and confidenc
 
 Acting as though we have already achieved the qualities we aspire to, acting as though we are already the better versions of ourselves that we imagined at the start of the journey means we can have an incredibly positive impact on those around us.
 
-Of course, it doesn't matter whether anyone follows. Only that we try to lead.
+Of course, it doesn't matter whether anyone follows.\newline Only that we try to lead.
 
 }
 \clearpage
