--- a/Patience.tex
+++ b/Patience.tex
@@ -11,24 +11,29 @@
 \HugeQuote{ADM_CHARGE}{Ask yourself this question:\newline
 Am I in charge of this situation or is this situation in charge of me?}{}{Anthony De Mello}{}
 
+\cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{ST_WAIT}{Do not make war}{ unless victory may be gained;\newline
 If there is a prospect of victory move; \newline
 Otherwise, do not.}{Sun Tzu}{}{}
 
 \hugeQuote{BG_NTL}{Never contend with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{}{}
-
+\vspace*{\fill}
+\cleartorightpage
+\vspace*{\fill}
 \hugeQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it}{.\newline
 Your doubts and hestitation will infect your execution.}{Robert Greene}{}{}
 
 \hugeQuote{RG_WAIT1}{Impatience}{: perhaps the single greatest pitfall.}{Robert Greene}{}{}
-
+\vspace*{\fill}
 %judgement
 %%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{UG_COUNT}{There are always more of them}{ before they are counted.}{Ulysses S Grant}{RH_ENDURE}{}
 
 \hugeQuote{WG_JUDGE}{The senses don't decieve}{, judgement deceives.}{John Von Goethe}{}{}
-
+\vspace*{\fill}
 \cleartorightpage
 \HugeQuote{E_DLTF}{Don't let the force of impressions knock you off your feet}{; just say to it \say{Just hold on a minute, let me see who you are and what you represent. Let me put you to the test.}}{Epictetus}{}{}
 
