--- a/Confidence.tex
+++ b/Confidence.tex
@@ -1,41 +1,44 @@
 \input{ConfidenceIntro.tex}
 
 %uncertainty
+\vspace*{\fill}
 \hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespeare}{}{}
 \hugeQuote{RG_CHAOS}{Let go}{ and move with the chaos that presents itself to you. 
 From within it you will find endless oppourtunities that elude other people.}{Robert Greene}{}{}
+\vspace*{\fill}
 
 \cleartorightpage
-
+\vspace*{\fill}
 \hugeQuote{AN_COURAGE}{Life shrinks or expands}{ in proportion to one's courage.}{Anais Nin}{JKZ_ENDURE}{}
 
 \hugeQuote{SL_SC}{So often self confidence is dependent on the basic but elusive premise}{:\newline
 \say{I'm fine as I am}}{School of Life}{}
 {\href{http://www.thebookoflife.org/on-confidence/}{http://www.thebookoflife.org/on-confidence/}} 
-
+\vspace*{\fill}
 %failure
 \cleartoleftpage
 % \smallQuote{LT_STEP}{The greatest things in the world much be accomplished by the samllest.}{Lao Tzu}{}
-
+\vspace*{\fill}
 \smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step.}{Ryan Holiday}{JP_STAND}
 
 \smallQuote{RG_FAIL}{Any kind of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work.}{Robert Greene}{}
 \smallQuote{MA_FAIL}{Not to feel exasperated, despondant and defeated because your days aren't packed with wise and moral actions. But to get back up when you fail, to celebrate behaving like a human (however imperfectly) and fully embrace the pursuit you've embarked on.}{Marcus Aurelius}{}
-\cleartorightpage
+\vspace*{\fill} \cleartorightpage
 
 \HugeQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do}{, or you can see the challenge as a call to action.}{Catherine Pulsifer}{S_CUCUMBER}{}
 
 \cleartoleftpage
-
+\vspace*{\fill}
 \hugeQuote{NH_FAIL}{Failure connot cope with persistence.}{}{Napoleon Hill}{MAR_PERSIST}{}
 
 \hugeQuote{NT_FAIL}{A mistake is not something to be determined after the fact}{ but in the light of information up to that point.}{Nassim Taleb}{}{}
 
-
+\vspace*{\fill}\cleartorightpage\vspace*{\fill}
 \hugeQuote{SP_FAIL}{A failed attempt}{ is just that and nothing more, it’s not the end and it’s not fatal. Keep at it.}{}{}
 
-\hugeQuote{RH_DESTROY}{You don't have to be the best}{ you just have to be harder to destroy. You have to be relentless.}{Ryan Holiday}{NH_FAIL}{}
-
+\hugeQuote{RH_DESTROY}{You don't have to be the best}{ you just have to be harder to destroy.\newline
+You have to be relentless.}{Ryan Holiday}{NH_FAIL}{}
+\vspace*{\fill}
 
 \cleartorightpage
 
@@ -44,20 +47,23 @@ Whatever.}{Danielle La Porte}{MA_DWH}{All that matters is how you respond.}
 
 %promotion
 \cleartoleftpage
+\vspace*{\fill}
 \smallQuote{EG_ASK}{He who demands little gets it.}{Ellen Glasgow}{}
 
 \smallQuote{AG_WORK}{Don't pretend you're not proud of your work.}{April Gornik}{C_BOAST}{}
 
 \smallQuote{RG_RADIATE}{Understand: you should be radiating confidence not arrogance and disdain.}{Robert Greene}{}
-
+\vspace*{\fill}
 \cleartorightpage
 %todo review location
 
-\hugeQuote{RG_DISPLAY}{You cannot display yourself too brazenly}{, yet you must get noticed. Create a distinctive (a subtly distinctive) style and image.}{Robert Greene}{}{}
+\HugeQuote{RG_DISPLAY}{You cannot display yourself too brazenly}{, yet you must get noticed. Create a distinctive (a subtly distinctive) style and image.}{Robert Greene}{}{}
 
 \cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{DLP_NYG}{You are not}{ your genes.}{Danielle La Porte}{}{}
 \hugeQuote{LB_SEP}{Don't let someone else's opinion of you become your reality.}{}{Les Brown}{}{}
+\vspace*{\fill}
 \cleartorightpage
 \HugeQuote{HM_DWW}{Don't water your weeds.}{}{Harvey Mackay}{}{}
 
