--- a/Learning.tex
+++ b/Learning.tex
@@ -9,14 +9,19 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{RG_MASTERY}{You must see your attempt at attaining mastery as something necessary and positive.}{}{Robert Greene}{}{}
 \hugeQuote{TP_BOOK}{If I read a book}{ and get one good idea from that \$20, then I've gotten one of the greatest deals of all time.}{Tom Peters}{MDM_BOOKS}{}
+\vspace*{\fill}
+\cleartorightpage
+\vspace*{\fill}
 \hugeQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{}{Benjamin Franklin}{}{}
 \hugeQuote{RH_LIVE}{Study as if you were going to live forever}{ but live as if you were going to die tomorrow.}{Edmund Rich}{}{}
+
 %Possibly much earlier though.
 %\llink{http://bit.ly/2fIQFOc
 %https://books.google.co.uk/books?id=95mdmyMC8SsC&dq=%22live+as+if+you+were+to+die+to-morrow%22&pg=PA147&redir_esc=y#v=onepage&q=%22live%20as%20if%20you%20were%20to%20die%20to-morrow%22&f=false
-
+\vspace*{\fill}
 \cleartoleftpage
 \HugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience.}{Arthur Schopenhaur}{}{}
 \cleartorightpage
@@ -32,10 +37,11 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong.}{Bertand Russell}{}{}
  
 \hugeQuote{SW_CHANGE}{The truths he finds}{ may in the comming months or even in the coming years be truths no more.}{Stefan Zwieg}{}{qv. half life of knowledge\footnote{http://bit.ly/2dRSViF}.}
-
+\vspace*{\fill}
 \cleartorightpage
 
 \HugeQuote{RH_ML}{More listening}{,\newline 
@@ -46,27 +52,32 @@ fewer conclusions.
 
 %todo possibly humility 
 %cf bertrand russell learning/flowers
+\vspace*{\fill}
 \hugeQuote{MDM_BOAST}{Does learning mean nothing to you}{ unless you know that someone else knows that you know it?}{Michel de Montaigne}{MC_BOAST}{}
 
 \hugeQuote{E_PIP}{If you didn't learn these things to put them into practice}{, what did you learn them for?}{Epictetus}{}{} 
-
+\vspace*{\fill}
+\cleartorightpage
+\vspace*{\fill}
 \hugeQuote{HST_NOBOAST}{I was not proud of what I had learned}{, but I never doubted that it was worth knowing.}{Hunter S. Thompson}{}{}
 
 \hugeQuote{C_ABILITY}{Ability will never catch up}{ with the demand for it.}{Confucious}{}{}
-
+\vspace*{\fill}
 %% mentors
 %%%%%%%%%%%%%%%%%%
 
 \cleartoleftpage
+\vspace*{\fill}
 \smallQuote{RG_TRUST}{Trust yourself more and others less.}{Robert Greene}{}
 \smallQuote{WS_TRUST}{Love all.\newline
 Trust few.\newline
 Do wrong to none.}{William Shakespeare}{}
 
 \smallQuote{MDM_SHEEP}{He who sheep-like follows another follows nothing. He discovers nothing because he seeks nothing.}{Michel de Montaigne}{}
-
+\vspace*{\fill}
 \cleartorightpage
-\HugeQuote{MI_TRUST}{You'll only get three mentors you can trust}{. Just make sure you're paying attention so you don't miss them.}{Madalina G. Idomir}{HT_CREDIT}{}
+\HugeQuote{MI_TRUST}{You'll only get three mentors you can trust}{.\newline
+Just make sure you're paying attention so you don't miss them.}{Madalina G. Idomir}{HT_CREDIT}{}
 
 
 %focus on what's important
