--- a/Resilience.tex
+++ b/Resilience.tex
@@ -37,7 +37,8 @@ stand eight.}{Japanese Proverb}{MA_PERSIST2}{}
 
 \smallQuote{MM_TAKE}{The outside world can take nothing from you 
 and cannot unhinge you, as long as you do not allow yourself to 
-be disturbed. The events of your time remain impotent before you 
+be disturbed.\newline
+The events of your time remain impotent before you 
 as long as you refuse to take part.}{Michel de Montaigne}{}{}
 
 
@@ -60,12 +61,12 @@ as long as you refuse to take part.}{Michel de Montaigne}{}{}
 
 
 \cleartoleftpage
-
+\vspace*{\fill}
 \hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it.}{Marcus Aurelius}{}{}
 
 \hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed.\newline
 Don't feel harmed and you haven't been.}{Marcus Aurelius}{}{}
-
+\vspace*{\fill}
 % \hugeQuote{MA_HARM2}{It can ruin your life}{ only if it ruins your character. Otherwise it cannot harm you. Inside or out.}{Marcus Aurelius}{}{}
 
 % \hugeQuote{MA_ALONE}{Everyone gets one life.}{ Your's is almost used up and instead of treating yourself with respect you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
@@ -92,11 +93,12 @@ Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
 %% observation vs perception
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{WS_PROBLEMS}{Nothing either good nor bad}{ but thinking makes it so.}{William Shakespeare}{}{}
 
 \hugeQuote{TNV_PROBLEMS}{Real difficulties can be overcome.}{\newline 
 It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}{}
-
+\vspace*{\fill}\cleartorightpage\vspace*{\fill}
 \hugeQuote{RH_PROBLEMS}{Problems are rarely as bad as we think they are}{, or rather, they are precisely as bad as we think they are.}{Ryan Holiday}{MA_JUDGE}{}
 
 \hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now.}{Marcus Aurelius}{}{}
@@ -114,6 +116,7 @@ It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{S_ENDURE}{Not to give in}{to adversity.\newline
 Not to trust prosperity.\newline 
 And always take note of Fortune's habit of behaving exactly as she pleases.}{Seneca}{}{}
@@ -121,7 +124,7 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 % \hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
 
 \hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock in a thunderstorm.}{Robert Louis Stephenson}{}{}
-
+\vspace*{\fill}
 % todo review location
 % \hugeQuote{JJ_WORK}{Take a canvas}{. Put a mark on it. Put another mark on it.}{Jasper Johns}{}{}
 
@@ -131,28 +134,35 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 \cleartorightpage
 \HugeQuote{CC_WORK}{Inspiration is for amateurs}{; the rest of us just show up and get to work.}{Chuck Close}{}{}
 
+\vspace*{\fill}
 \hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{ Sometimes courage is the quiet voice at the end of the day whispering: \newline \say{I will try again tomorrow.}}{Mary Anne Radmach}{CP_FAIL}{}
 
-\hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong.}{Marcus Aurelius}{}{}
+\hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong.}{Marcus Aurelius}{}{}\vspace*{\fill}
 \cleartorightpage
 \HugeQuote{LT_ENDURE}{Don't cling to your body's woes}{. Then you can learn endurance.}{Lao Tzu}{}
 
 \cleartoleftpage
+\vspace*{\fill}
 \hugeQuote{H_CHANGE}{Change is the only constant in life.}{}{Heraclitus}{}{}
 
 \hugeQuote{JM_CHANGE}{You can suffer}{ the pain of change or suffer remaining the way you are.}{Joyce Meyer}{}{}
-
+\vspace*{\fill}
 \cleartorightpage
-\HugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf.}{Jon Kabat Zin}{H_CHANGE}{}
+\HugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf.}{Jon Kabat-Zinn}{H_CHANGE}{}
 
 %% Solitude
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
+\vspace*{\fill}
+\smallQuote{JKZ_TYA}{Wherever you go, there you are.}{Jon Kabat-Zinn}{}
+
+\smallQuote{AS_ALONE}{The more a man has in himself,\newline
+the less others can be to him.}{Arthur Schopenhauer}{} 
+
 \smallQuote{JB_ALONE}{All of our unhappiness comes from our inability to be alone.}{Jean de la Brugere}{}{}
 % \smallQuote{GVG_ALONE}{A bore is someone who deprives you of solitude without providing you with company}{Gian Vincenzo Gravina}{}{}
 % \smallQuote{RG_ALONE}{Strive to keep yourself free from unnecessary entanglements and alliances.}{Robert Greene}{}{}
 
-\smallQuote{AS_ALONE}{The more a man has in himself, the less others can be to him.}{Arthur Schopenhauer}{} 
 % \smallQuote{RWE_ALONE}{Nothing can bring you peace but yourself.\newline
 % Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}
 
@@ -161,20 +171,21 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 
 \smallQuote{LT_KTS}{Knowing others is intelligent.\newline
 Knowing yourself is enlightened.}{Lao Tzu}{}
-
+\vspace*{\fill}
 \cleartorightpage
-\HugeQuote{A_ALONE}{Happiness depends on ourselves.}{}{Aristotle}{}{}
+\HugeQuote{A_ALONE}{Happiness depends on}{\newline
+ourselves.}{Aristotle}{}{}
 
 %% planning for failure and NV
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-
+\vspace*{\fill}
 \smallQuote{OS_OPTIMISM}{Optimism is cowardice.}{Oswald Spengler}{}
 
 \smallQuote{PPPPP}{Proper planning prevents piss poor performance.}{}
 
 \smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success.}{Confucius}{}
-
+\vspace*{\fill}
 \cleartorightpage
 
 \HugeQuote{HOPE}{Hope is a poor hedge.}{}{Erik R. Sirri}{}{
