--- a/ResilienceIntro.tex
+++ b/ResilienceIntro.tex
@@ -1,14 +1,14 @@
 \cleardoublepage
 {\small
 
-We can't have full control and so things won't always turn out as we'd hoped. Having the courage to pursue our goal in the face of unexpected changes of plan (\S \ref{H_CHANGE}), times of poor judgement (\S \ref{FN_TIRED}), and even after outright failures (\S \ref{NT_FAIL}) will mean that we'll still make slow progress towards our aim of a better self. 
+We can't have full control and so we know (by now) that things won't turn out as we hope. Having the courage to pursue our goal in the face of unexpected changes of plan (\S \ref{H_CHANGE}), times of poor judgement (\S \ref{FN_TIRED}), and even after outright failures (\S \ref{NT_FAIL}) will mean that we'll still make slow progress towards our aim of a better self. 
 
-The challenges won't just come from us and our lapses in judgement or the Fates\llink{https://en.wikipedia.org/wiki/Parcae} changing their mind, others will see our improvement and resent us or even try to derail us (\S \ref{S_BTR}). Our successes can make them uncomfortable when they feel lazy, cruel or arrogant. When that happens we need to remember that we were there not so long ago ourselves (\S \ref{SL_GIVE}) but we need to keep focussed on what's truly important and what we're trying to achieve. Our route is hard enough without allowing other people to throw us off course (\S \ref{PL_DST}).
+The challenges won't just come from ourselves and our frequent lapses in judgement or the Fates\llink{https://en.wikipedia.org/wiki/Parcae} changing their mind, others will see our improvement and resent us or even try to derail us (\S \ref{S_BTR}). Our successes can make them uncomfortable when they feel lazy, cruel or arrogant. When that happens we need to remember that we were there not so long ago ourselves (\S \ref{SL_GIVE}) but we need to keep focussed on what's truly important and what we're trying to achieve. Our route is hard enough without allowing other people to throw us off course (\S \ref{PL_DST}).
 
-Picking ourselves up and dusting ourselves off needs to become second nature. We may be lucky enough to have support from others at times but we know we can't rely on that, we can only rely on what we control and that is nothing more than our response to what has happened.
+Picking ourselves up and dusting ourselves off needs to become second nature. We may be lucky enough to have support from others at times but we know we can't rely on that, we can only rely on what we control and that is nothing more than our response to what has happened. In the end, you are the only thing you can rely on (\S \ref{JKZ_TYA}).
 
-To reach our goals we don't need to be the best (\S \ref{RH_DESTROY}), and in our case it doesn't really make sense to \say{be the best} as we'll always be able to improve in some way, but we do need to keep at it and no matter what happens acting as though we were already the better person we want to be (\S \ref{MA_DWH}).
-
-No matter what's happened, no matter what they've said, no matter what they've done; it's up to us how we react, it's up to us what happens next.
+To reach our goals we don't need to be the best (\S \ref{RH_DESTROY}), and in our case it doesn't really make sense to \say{be the best}, we can always improve, but we do need to keep at it no matter what happens. Acting as though we were already the better person we want to be (\S \ref{MA_DWH}).
+\newline
+No matter what's happened, no matter what they've said, no matter what they've done, always remember. It's up to us how we react, it's up to us what happens next.
 
 }
