add quote from Henry Carroll
Another photography / focus quote. Similar to the one from Uta Birth

--- a/Focus.tex
+++ b/Focus.tex
@@ -49,6 +49,8 @@ you both get dirty and the pig likes it.}{George Bernard Shaw}{RH_PIGS2}
 
 \smallQuote{UB_DL}{Photography is a subtractive process, you start with the whole world and finish with a small square of it.}{Uta Birth}{TF_SLO}
 
+%\smallQuote{HC_DL}{What you choose to exclude is just as inportant as what you choose to include.}{Henry Carroll}{} 
+
 %todo: position
 % \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see.}{Marcus Aurelius}{}
 
