add quote from Ulysses S. Grant

--- a/Focus.tex
+++ b/Focus.tex
@@ -33,6 +33,9 @@
 
 \HugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
 
+
+%\hugeQuote{USG_DOIT}{The task is a big one}{ and has to be performed by someone.}{Ulysses S. Grant}{}{} 
+
 %TODO possibly humility ? 
 % \smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it.}{George Bernard Shaw}{MA_NOW2}{}
 
