add reading quote from RH

--- a/Learning.tex
+++ b/Learning.tex
@@ -27,6 +27,8 @@
 \cleartorightpage
 \HugeQuote{HST_REACT}{Every reaction is a learning process}{; every significant experience alters your perspective.}{Hunter S. Thompson}{}{}
 
+%\hugeQuote(RHRS}{Reading is not the thing you squeeze in with your other important tasks, it is the important task.}{}{Ryan Holiday}{}{} 
+
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
