add quote on leadership from Seth

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -10,6 +10,9 @@
 \hugeQuote{FB_WISE}{Wise men make more opportunities than they find.}{}{Francis Bacon}{}{}
 
 \hugeQuote{RLS_SEED}{Don't judge each day by the harvest you reap}{ but by the seeds you sow.}{Robert Louis Stephenson}{}{}
+
+\hugeQuote{SG_JOB}{Our job as leaders} (and we all are, in our own way) is to elevate the long run on behalf of those we care about.}{Seth Godin}{}{}
+
 \vspace*{\fill}
 \cleartorightpage
 
