add helpful link for printing

--- a/project.tex
+++ b/project.tex
@@ -1,5 +1,6 @@
 \documentclass{book}
 %For practicality we'll go for A Format
+% see: http://www.inkylittlefingers.co.uk/main/products/boundbooks
 \usepackage[paperheight=17.8cm,paperwidth=11.0cm]{geometry}
 
 \usepackage{tabularx}
