add quite from Benjamin Franklin

--- a/Generosity.tex
+++ b/Generosity.tex
@@ -49,6 +49,7 @@ Mine: to be patient and cheeerful with everyone (including them).}{Marcus Aureli
 \cleartoleftpage
 \hugeQuote{MA_MISTAKE}{That you've made enough mistakes yourself}{. You're just like them.}{Marcus Aurelius}{SL_GIVE}{}
 
+%\smallQuote{BF_SEARCH}{Search others for their virtues, thyself for thy vices.}{Benjamin Franklin}{} 
 
 \hugeQuote{MDM_SELF}{If talking to oneself did not look so mad}{ no day would go by without my growling to myself \say{you silly shit!}\newline
 Yet, I do not intend that to be the definition of me.}{Michel De Montaigne}{HM_DWW}{}
