--- a/Learning.tex
+++ b/Learning.tex
@@ -41,6 +41,8 @@
 \cleartoleftpage
 \vspace*{\fill}
 \hugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong.}{Bertand Russell}{}{}
+
+\hugeQuote{JBB_CHANGE}{You must be ready to revise what you hold to bevthe truth}{; you must always hold things provisionally.}{Jocelyn Bell Burnell}{MA_CHANGE}{} %From The Economist Espresso: Quote of the day https://qfy-d.tlnk.io/serve?action=click&publisher_id=352073&site_id=113376&my_campaign=Social_Share&my_publisher=EdSocial&my_ad=QOTD&site_id_android=113374
  
 \hugeQuote{SW_CHANGE}{The truths he finds}{ may in the comming months or even in the coming years be truths no more.}{Stefan Zwieg}{}{qv. half life of knowledge\footnote{http://bit.ly/2dRSViF}.}
 \vspace*{\fill}
@@ -91,6 +93,10 @@ Just make sure you're paying attention so you don't miss them.}{Madalina G. Idom
 \HugeQuote{S_FOLLY}{Isn't it the height of folly to learn inessential things}{ when time is so desperately short?}{Seneca}{MA_DL}{}
 \cleartoleftpage
 \HugeQuote{MDM_WROTE}{To know by heart is not to know}{, it is to keep what they have given youa and store it in your memory}{Michel de Montaigne}{}
+
+%\smallQuote{NOBADGE}{When you truly know something, you don't need a badge}{}{} 
+
+
 
 \cleartorightpage
 \HugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
