add shelley quote

--- a/Focus.tex
+++ b/Focus.tex
@@ -6,6 +6,10 @@
  
 \cleartoleftpage
 
+%nothing contributes so much to tranquilize the mind as a steady purpose - a point on which the soul can fox its intellectual eye. 
+%Mary Shelley
+
+
 %company and how you spend your time
 
 \smallQuote{LC_COMPANY}{You are whatever the company you keep is.}{Lord Chesterfield}{}{}
