Add cyrus the great quote

--- a/Humility.tex
+++ b/Humility.tex
@@ -31,6 +31,9 @@
 %%%fate
 \cleartoleftpage
 \vspace*{\fill}
+
+%\smallQuote{CTG_LUCK}{In my experience, men who respond to good fortune with modesty are harder to find than those who face adversity with courage.}{Cyrus the Great}{} % check source
+
 \smallQuote{AS_LUCK}{Men of any worth soon come to see that they are in the hands of Fate and gratefully submit to be moulded by its teachings.}{Arthur Schopenhauer}{} 
 
 \smallQuote{MA_ALWAYS}{Everywhere, at each moment, you have the option:
