add INACTION quote

--- a/Action.tex
+++ b/Action.tex
@@ -62,5 +62,8 @@ But the hardest thing of all is to act in accordance with your thinking.}{John V
 
 \HugeQuote{MR_ACT}{Although understanding the theory behind the action enables one to speak}{, it is the practice which enables one to act.}{Musonius Rufus}{}{}
 
+
+\smallQuote{MA_INACTION}{If it is not right, do not do it. If it is not true, do not say it.}{Marcus Aurelius}{} 
+
 \cleartorightpage
 \HugeQuote{JL_LIFE}{Life is what happens}{ while you are busy making other plans.}{John Lennon}{}{}
